--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -60,7 +60,7 @@
           >
             Bienvenido
           </span>
-          a mi Curriculum
+          a mi Currículum
         </h1>
         <p
           class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left"
@@ -84,9 +84,9 @@
               type="text"
               placeholder="Juanito Perez"
               [(ngModel)]="nombre"
+              maxlength="50"
             />
           </div>
-
           <div class="flex items-center justify-between pt-4">
             <button
               class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
