--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -91,7 +91,7 @@
             <button
               class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
               type="button"
-              (click)="holamundo()"
+              (click)="inputnombre()"
             >
               Empezemos
             </button>
@@ -103,7 +103,7 @@
       <div class="w-full xl:w-3/5 p-12 overflow-hidden">
         <img
           class="mx-auto w-full md:w-4/5 transform -rotate-6 transition hover:scale-105 duration-700 ease-in-out hover:rotate-6"
-          src="assets/imagen4.webp"
+          src="assets/imagenlanding.webp"
         />
       </div>
 
