seguir moviendo px de liena 3

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,13 @@
 <section class="leading-normal tracking-normal text-indigo-400 bg-gray-800 bg-fixed min-h-screen">
   <div class="py-16">
-      <div class="mx-auto px-6 max-w-6xl text-gray-500">
+      <div class="mx-auto px-32 max-w-8xl text-gray-500">
           <div class="text-center">
               <h2 class="text-3xl text-gray-950 dark:text-white font-semibold">hola</h2>
               <p class="mt-6 text-gray-700 dark:text-gray-300">cosas de texto</p>
           </div>
-          <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-3">
+          <div class="mt-12 grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
               <!-- Primer elemento -->
-              <div class="relative group overflow-hidden p-8 rounded-xl bg-gray-500 border border-gray-200">
+              <div class="relative group overflow-hidden p-10 rounded-xl bg-gray-500 border border-gray-200">
                   <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-blue-600 to-white dark:from-white dark:to-white blur-2xl opacity-70 dark:opacity-60 dark:group-hover:opacity-10"></div>
                   <div class="relative">
                       <!-- Cuadrito -->
@@ -28,7 +28,7 @@
                   </div>
               </div>
               <!-- Segundo elemento -->
-              <div class="relative group overflow-hidden p-8 rounded-xl bg-gray-500 border border-gray-200">
+              <div class="relative group overflow-hidden p-10 rounded-xl bg-gray-500 border border-gray-200">
                   <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-green-600 to-white dark:from-white dark:to-white blur-2xl opacity-70 dark:opacity-60 dark:group-hover:opacity-10"></div>
                   <div class="relative">
 
@@ -49,7 +49,7 @@
                   </div>
               </div>
               <!-- Tercer elemento -->
-              <div class="relative group overflow-hidden p-8 rounded-xl bg-gray-500 border border-gray-200">
+              <div class="relative group overflow-hidden p-10 rounded-xl bg-gray-500 border border-gray-200">
                 <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-red-600 to-white dark:from-white dark:to-white blur-2xl opacity-70 dark:opacity-60 dark:group-hover:opacity-10"></div>
                 <div class="relative">
 
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="mt-6 pb-6 rounded-b-[--card-border-radius]">
-                        <p class="text-2xl text-white">Educación</p>
+                        <p class="text-2xl text-white">Cursos y certificaciones</p>
                     </div>
 
                     <div class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800">
@@ -70,7 +70,7 @@
                 </div>
             </div>
               <!-- Cuarto elemento -->
-              <div class="relative group overflow-hidden p-8 rounded-xl bg-gray-500 border border-gray-200">
+              <div class="relative group overflow-hidden p-10 rounded-xl bg-gray-500 border border-gray-200">
                 <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-yellow-600 to-white dark:from-white dark:to-white blur-2xl opacity-70 dark:opacity-60 dark:group-hover:opacity-10"></div>
                 <div class="relative">
 
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="mt-6 pb-6 rounded-b-[--card-border-radius]">
-                        <p class="text-2xl text-white">Educación</p>
+                        <p class="text-2xl text-white">Proyectos personales</p>
                     </div>
 
                     <div class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800">
@@ -91,7 +91,7 @@
                 </div>
             </div>
               <!-- Quinto elemento -->
-              <div class="relative group overflow-hidden p-8 rounded-xl bg-gray-500 border border-gray-200">
+              <div class="relative group overflow-hidden p-10 rounded-xl bg-gray-500 border border-gray-200">
                 <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-pink-600 to-white dark:from-white dark:to-white blur-2xl opacity-70 dark:opacity-60 dark:group-hover:opacity-10"></div>
                 <div class="relative">
 
@@ -100,7 +100,7 @@
                     </div>
 
                     <div class="mt-6 pb-6 rounded-b-[--card-border-radius]">
-                        <p class="text-2xl text-white">Educación</p>
+                        <p class="text-2xl text-white">Sobre mi</p>
                     </div>
 
                     <div class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800">
@@ -112,7 +112,7 @@
                 </div>
             </div>
               <!-- Sexto elemento -->
-              <div class="relative group overflow-hidden p-8 rounded-xl bg-gray-500 border border-gray-200">
+              <div class="relative group overflow-hidden p-10 rounded-xl bg-gray-500 border border-gray-200">
                 <div aria-hidden="true" class="inset-0 absolute aspect-video border rounded-full -translate-y-1/2 group-hover:-translate-y-1/4 duration-300 bg-gradient-to-b from-indigo-600 to-white dark:from-white dark:to-white blur-2xl opacity-70 dark:opacity-60 dark:group-hover:opacity-10"></div>
                 <div class="relative">
 
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="mt-6 pb-6 rounded-b-[--card-border-radius]">
-                        <p class="text-2xl text-white">Educación</p>
+                        <p class="text-2xl text-white">CV en PDF</p>
                     </div>
 
                     <div class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800">
