--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,15 +1,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Rainblur Landing Page Template: Tailwind Toolbox</title>
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
-  />
 
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
@@ -45,7 +36,7 @@
 
     <!--Main-->
     <div
-      class="container pt-24 md:pt-32 mx-auto flex flex-wrap flex-col md:flex-row items-center"
+      class="container pt-24 md:pt-12 mx-auto flex flex-wrap flex-col md:flex-row items-center"
     >
       <!--Left Col-->
       <div
@@ -85,6 +76,7 @@
               placeholder="Juanito Perez"
               [(ngModel)]="nombre"
               maxlength="50"
+              (keyup.enter)="inputnombre()"
             />
           </div>
           <div class="flex items-center justify-between pt-4">
