se agrega texto

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,21 @@
 <section
-  class="leading-normal tracking-normal text-indigo-400 bg-gray-800 bg-fixed min-h-screen"
+  class="leading-normal tracking-normal text-indigo-400 bg-cover bg-fixed min-h-screen"
   style="background-image: url('assets/header.png')"
 >
   <div class="py-12">
+ 
     <div class="mx-auto px-16 max-w-8xl text-gray-500">
+        <div class="relative text-center">
+            <h2
+            class="leading-normal text-indigo-400 md:text-5xl mb-8"
+            >
+              Hola soy Marco Rubio y este es mi CV
+            </h2>
+            <br />
+            <p class="leading-normal text-white md:text-2xl mb-8">
+              Selecciona una opción para ver más detalles
+            </p>
+          </div>
       <div class="mt-12 grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Primer elemento -->
         <div
