--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -30,13 +30,12 @@
         <h1
           class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center md:text-left"
         >
-          Hola,
           <span
             class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500"
           >
             Bienvenido
           </span>
-          a mi Currículum,soy Marco Rubio
+          a mi Currículum
         </h1>
         <p
           class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left"
@@ -46,7 +45,7 @@
 
           <div class="flex justify-center pt-4">
             <button
-              class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
+              class="ml-1 mb-4 bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
               type="button"
               (click)="enviarAlMenu()"
             >
