se crea routing del menu

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,18 +3,12 @@
   style="background-image: url('assets/header.png')"
 >
   <div class="py-12">
- 
+
     <div class="mx-auto px-16 max-w-8xl text-gray-500">
         <div class="relative text-center">
-            <h2
-            class="leading-normal text-indigo-400 md:text-5xl mb-8"
-            >
-              Hola soy Marco Rubio y este es mi CV
-            </h2>
-            <br />
-            <p class="leading-normal text-white md:text-2xl mb-8">
-              Selecciona una opción para ver más detalles
-            </p>
+            <h1 class="leading-normal text-white md:text-4xl mb-8">
+              Hola, soy Marco Rubio, selecciona una opción para ver más detalles
+            </h1>
           </div>
       <div class="mt-12 grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Primer elemento -->
@@ -45,7 +39,7 @@
               class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800"
             >
               <a
-                href="menu"
+                href="experiencia"
                 class="group rounded-xl text-gray-950 bg-gray-300 hover:bg-gray-100 active:bg-gray-100 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center"
               >
                 <span>Ver más</span>
@@ -90,7 +84,7 @@
               class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800"
             >
               <a
-                href="menu"
+                href="educacion"
                 class="group rounded-xl text-gray-950 bg-gray-300 hover:bg-gray-100 active:bg-gray-100 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center"
               >
                 <span>Ver más</span>
@@ -135,7 +129,7 @@
               class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800"
             >
               <a
-                href="menu"
+                href="cursos"
                 class="group rounded-xl text-gray-950 bg-gray-300 hover:bg-gray-100 active:bg-gray-100 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center"
               >
                 <span>Ver más</span>
@@ -180,7 +174,7 @@
               class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800"
             >
               <a
-                href="menu"
+                href="proyectos"
                 class="group rounded-xl text-gray-950 bg-gray-300 hover:bg-gray-100 active:bg-gray-100 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center"
               >
                 <span>Ver más</span>
@@ -225,7 +219,7 @@
               class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800"
             >
               <a
-                href="menu"
+                href="sobremi"
                 class="group rounded-xl text-gray-950 bg-gray-300 hover:bg-gray-100 active:bg-gray-100 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center"
               >
                 <span>Ver más</span>
@@ -270,7 +264,7 @@
               class="-mb-8 py-4 border-t border-gray-800 dark:border-gray-800"
             >
               <a
-                href="menu"
+                href="contacto"
                 class="group rounded-xl text-gray-950 bg-gray-300 hover:bg-gray-100 active:bg-gray-100 flex gap-1.5 items-center text-sm h-8 px-3.5 justify-center"
               >
                 <span>Ver más</span>
