--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -1,1 +1,26 @@
-<p>experiencia works!</p>
+<div class="flex flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
+
+  <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-white selection:text-white flex-grow">
+    <h1 class="font-fira mb-8 text-4xl font-bold dark:text-white sm:mt-12">Experiencia <span class="text-green-500">Laboral</span></h1>
+
+    <img class="float-right w-52 rounded-full -mt-8 ml-8" src="assets/iconexp.png" alt="nose" />
+
+
+    <p class="mt-10 text-lg dark:text-neutral-200">Aqui encontraras los diferentes <span class="text-green-500">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-500">fortalezas</span> que desarrolle, los <span class="text-green-500">proyectos</span> en los que me vi involucrado y por ultimo  las circunstancias que llevaron a la terminación de cada relación laboral. </p>
+
+
+    <section class="mt-12">
+      <h2 class="text-3xl font-bold dark:text-white">Work Experience</h2>
+      <p class="mt-6 text-lg dark:text-neutral-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+        aspernatur numquam suscipit. Quae, itaque veritatis. Mollitia sunt consequatur a. Id, quia fuga laudantium enim
+        illo deserunt minima pariatur soluta veniam!</p>
+    </section>
+
+  </article>
+
+    <footer class="footer items-center p-4 bg-neutral text-neutral-content text-white">
+      <aside class="items-center grid-flow-col">
+        <p>&copy; WEB PAGE 2024</p>
+      </aside>
+    </footer>
+</div>
